[B]Version 0.2.1[/B]
- Fixed caching problem - channels/schedule data is now only cached for 10 minutes
- Added some basic logging

[B]Version 0.2.0[/B]
- Refactoring to several modules/objects
- Loads channel/schedule data from veetleguide.appspot.com
- Caches channel/schedule data to prevent reloading of data for each view
- Sort channels by popularity / current viewers
- Show channel count next to category
- Show current schedule item next to channel in category view
- Added schedule view
- Improved label formatting

[B]Version 0.1.6[/B]
- fix breakage due to site changes

[B]Version 0.1.5[/B]
- temporarily(?) remove schedule code due to site changes

[B]Version 0.1.4[/B]
- more error handling

[B]Version 0.1.3[/B]
- quick small fix for older python versions

[B]Version 0.1.2[/B]
- Schedule grabbing (turn off in plugin settings)

[B]Version 0.1.1[/B]
- Quick fix for missing large thumbnail on a channel

[B]Version 0.1.0[/B]
- Initial version